@@ -11,7 +11,7 @@ generateHarmonics(pitch, glottis = 0, attackLen = 50,
   rolloffOct = 0, rolloffKHz = 0, rolloffParab = 0,
   rolloffParabHarm = 3, rolloff_perAmpl = 0, rolloffExact = NULL,
   temperature = 0.025, pitchDriftDep = 0.5, pitchDriftFreq = 0.125,
-  amplDriftDep = 5, subDriftDep = 4, rolloffDriftDep = 3,
+  amplDriftDep = 1, subDriftDep = 4, rolloffDriftDep = 3,
   randomWalk_trendStrength = 0.5, shortestEpoch = 300, subFreq = 100,
   subDep = 0, ampl = NA, normalize = TRUE, interpol = c("approx",
   "spline", "loess")[3], overlap = 75, samplingRate = 16000,
